--- a/examples/basic-json-backend/.specs/tasks/tasks.json
+++ b/examples/basic-json-backend/.specs/tasks/tasks.json
@@ -2,17 +2,17 @@
   "tasks": [
     {
       "id": "TASK-001",
-      "status": "completed",
+      "status": "in-progress",
       "priority": "high"
     },
     {
       "id": "TASK-002",
-      "status": "completed",
+      "status": "pending",
       "priority": "medium"
     },
     {
       "id": "TASK-003",
-      "status": "in-progress",
+      "status": "pending",
       "priority": "low"
     }
   ]
