chore: update package scripts and social automation
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "build": "bun build ./src/index.ts --compile --outfile bin/loopwork",
     "test": "bun test",
     "setup-labels": "bun run src/setup-labels.ts",
+    "posts:generate": "bun run scripts/generate-posts.ts",
+    "posts:schedule": "bun run scripts/schedule-linkedin-posts.ts",
+    "posts:preview": "bun run scripts/generate-posts.ts markdown",
     "prepack": "npm run build",
     "pack:dry": "npm pack --dry-run",
     "pack:check": "npm pack && tar -tzf *.tgz && rm *.tgz",
