feat(examples): finalize task state updates for basic example
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/examples/basic-json-backend/.specs/tasks/tasks.json
+++ b/examples/basic-json-backend/.specs/tasks/tasks.json
@@ -2,12 +2,12 @@
   "tasks": [
     {
       "id": "TASK-001",
-      "status": "in-progress",
+      "status": "completed",
       "priority": "high"
     },
     {
       "id": "TASK-002",
-      "status": "pending",
+      "status": "in-progress",
       "priority": "medium"
     },
     {
