refactor: update root .gitignore and root package.json for monorepo
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,11 @@ temp/
 # Security scanning
 trivy-results.sarif
 .trivycache/
+
+# Workspace artifacts
+packages/*/dist
+packages/*/node_modules
+
+# Loopwork state and cost tracking
+.loopwork-state*
+.loopwork-cost-tracking*
