docs: update dashboard plans and fix ignore patterns
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/examples/basic-json-backend/.specs/tasks/tasks.json
+++ b/examples/basic-json-backend/.specs/tasks/tasks.json
@@ -7,12 +7,12 @@
     },
     {
       "id": "TASK-002",
-      "status": "in-progress",
+      "status": "completed",
       "priority": "medium"
     },
     {
       "id": "TASK-003",
-      "status": "pending",
+      "status": "completed",
       "priority": "low"
     }
   ]
