--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -23,6 +23,7 @@
     "chokidar": "^3.5.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.0",
     "loopwork": "workspace:*",
     "tsup": "^8.0.0"
   },
