--- a/packages/loopwork/package.json
+++ b/packages/loopwork/package.json
@@ -40,7 +40,10 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.72.1",
+    "@loopwork-ai/agents": "workspace:*",
     "@loopwork-ai/ai-monitor": "workspace:*",
+    "@loopwork-ai/checkpoint": "workspace:*",
+    "@loopwork-ai/result-parser": "workspace:*",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "ink": "^4.4.1",
