--- a/packages/loopwork/package.json
+++ b/packages/loopwork/package.json
@@ -43,6 +43,7 @@
     "@loopwork-ai/agents": "workspace:*",
     "@loopwork-ai/ai-monitor": "workspace:*",
     "@loopwork-ai/checkpoint": "workspace:*",
+    "@loopwork-ai/control-api": "workspace:*",
     "@loopwork-ai/result-parser": "workspace:*",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
