--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-pty": "^1.1.0"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.72.1"
+    "@anthropic-ai/sdk": "^0.72.1",
+    "ink-testing-library": "^4.0.0"
   }
 }
