feat(dashboard): update dashboard package
- Update plugin broadcaster, routes, server, types
- Add TUI components (NamespacesBox, RecentActivityBox, RunningLoopsBox)
- Add broadcaster tests
- Update package.json and tsconfig

--- a/packages/dashboard/tsconfig.json
+++ b/packages/dashboard/tsconfig.json
@@ -3,20 +3,11 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "noEmit": true,
-    "declaration": false,
-    "declarationMap": false,
-    "paths": {
-      "@loopwork-ai/loopwork": ["../loopwork/dist/index.d.ts"],
-      "@loopwork-ai/loopwork/*": ["../loopwork/dist/*"]
-    }
+    "noEmit": true
   },
   "include": ["src/**/*"],
   "exclude": [
     "node_modules",
-    "dist",
-    "../ai-monitor/**/*",
-    "../telegram/**/*",
-    "../loopwork/src/**/*"
+    "dist"
   ]
 }
