--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -14,7 +14,7 @@
     "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
     "dev:web": "cd web && bun run dev",
     "build:web": "cd web && bun run build",
-    "test": "echo 'Run playwright test separately with: bun run test:e2e'",
+    "test": "bun test",
     "test:e2e": "playwright test",
     "test:ui": "playwright test --ui",
     "prepublishOnly": "bun run build && bun run build:web"
