docs: update documentation and examples
- Update main README
- Update tasks.json with new task specs
- Update basic-json-backend example
- Add fix documentation (COST-AWARE, FAILURE-STATE)
- Add model testing documentation
- Add documentation plugins examples
- Add OpenCode models reference
- Add working models snippet

--- a/examples/basic-json-backend/.specs/tasks/tasks.json
+++ b/examples/basic-json-backend/.specs/tasks/tasks.json
@@ -2,17 +2,17 @@
   "tasks": [
     {
       "id": "TASK-001",
-      "status": "completed",
+      "status": "pending",
       "priority": "high"
     },
     {
       "id": "TASK-002",
-      "status": "completed",
+      "status": "pending",
       "priority": "medium"
     },
     {
       "id": "TASK-003",
-      "status": "completed",
+      "status": "pending",
       "priority": "low"
     }
   ]
