--- a/packages/loopwork/package.json
+++ b/packages/loopwork/package.json
@@ -43,11 +43,11 @@
     "@loopwork-ai/agents": "workspace:*",
     "@loopwork-ai/ai-monitor": "workspace:*",
     "@loopwork-ai/checkpoint": "workspace:*",
-    "@loopwork-ai/control-api": "workspace:*",
     "@loopwork-ai/result-parser": "workspace:*",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "ink": "^4.4.1",
+    "ink-testing-library": "^3.0.0",
     "ora": "8.0.1",
     "react": "^18.2.0"
   },
