--- a/packages/notion/package.json
+++ b/packages/notion/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "build": "echo 'Skipping notion build'",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
     "test": "bun test"
   },
