fix(dashboard): render pending tasks list

--- a/.specs/tasks/tasks.json
+++ b/.specs/tasks/tasks.json
@@ -104,7 +104,7 @@
     },
     {
       "id": "PARALLEL-001b",
-      "status": "pending",
+      "status": "completed",
       "priority": "high",
       "title": "Parallel: Add --parallel and --sequential CLI flags",
       "feature": "parallel",
@@ -123,8 +123,20 @@
             "oldStatus": "completed",
             "newStatus": "pending"
           }
+        },
+        {
+          "timestamp": "2026-01-31T22:26:06.692Z",
+          "type": "completed",
+          "message": "Implementation verified: --parallel and --sequential flags already implemented",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "completed"
+          }
         }
-      ]
+      ],
+      "timestamps": {
+        "completedAt": "2026-01-31T22:26:06.692Z"
+      }
     },
     {
       "id": "PARALLEL-001c",
@@ -174,7 +186,7 @@
     },
     {
       "id": "PARALLEL-001d",
-      "status": "pending",
+      "status": "completed",
       "priority": "high",
       "title": "Parallel: Implement claimTask() in JsonTaskAdapter",
       "feature": "parallel",
@@ -193,8 +205,20 @@
             "oldStatus": "completed",
             "newStatus": "pending"
           }
+        },
+        {
+          "timestamp": "2026-01-31T22:26:13.245Z",
+          "type": "completed",
+          "message": "Implementation verified: claimTask() fully implemented in JsonTaskAdapter",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "completed"
+          }
         }
-      ]
+      ],
+      "timestamps": {
+        "completedAt": "2026-01-31T22:26:13.244Z"
+      }
     },
     {
       "id": "PARALLEL-001e",
@@ -675,7 +699,7 @@
     },
     {
       "id": "AI-MONITOR-001a",
-      "status": "in-progress",
+      "status": "completed",
       "priority": "high",
       "title": "AI Monitor: Core Infrastructure (LogWatcher + PatternDetector)",
       "feature": "ai-monitor",
@@ -700,12 +724,23 @@
             "newStatus": "in-progress",
             "method": "claimTask"
           }
+        },
+        {
+          "timestamp": "2026-01-31T22:18:31.691Z",
+          "type": "completed",
+          "message": "Completed by Loopwork (parallel worker 8)\n\nSession: loopwork-default-2026-01-31T22-03-30-46989\nIteration: 1",
+          "metadata": {
+            "oldStatus": "in-progress",
+            "newStatus": "completed"
+          }
         }
       ],
       "timestamps": {
         "createdAt": "2026-01-31T22:03:31.267Z",
-        "startedAt": "2026-01-31T22:03:31.267Z"
-      }
+        "startedAt": "2026-01-31T22:03:31.267Z",
+        "completedAt": "2026-01-31T22:18:31.691Z"
+      },
+      "failureCount": 0
     },
     {
       "id": "AI-MONITOR-001b",
