chore: update gitignore with WIP files and state files
Add state/runtime files (*.state.json, .loopwork-cost-tracking.json, test*.json)
and WIP documentation patterns to gitignore.
Remove WIP files from git tracking (files kept locally).

💘 Generated with Crush

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,18 @@ plans/
 .specs/attachments/
 **/test-photo-*.jpg
 **/test-photo-*.png
+
+# State/Runtime files
+*.state.json
+.loopwork-cost-tracking.json
+test*.json
+
+# WIP/Temporary documentation
+*-FIX.md
+*-IMPLEMENTATION.md
+*IMPLEMENTATION.md
+MODEL-TESTING.md
+opencode-models-reference.md
+
+# WIP directories
+marketing/
