--- a/.specs/tasks/tasks.json
+++ b/.specs/tasks/tasks.json
@@ -798,7 +798,7 @@
     },
     {
       "id": "AI-MONITOR-001c",
-      "status": "pending",
+      "status": "completed",
       "priority": "high",
       "title": "AI Monitor: Circuit Breaker",
       "feature": "ai-monitor",
@@ -823,8 +823,22 @@
             "oldStatus": "completed",
             "newStatus": "pending"
           }
+        },
+        {
+          "timestamp": "2026-01-31T23:02:25.866Z",
+          "type": "completed",
+          "message": "Completed by Loopwork (parallel worker 2)\n\nSession: loopwork-default-2026-01-31T22-49-42-72137\nIteration: 1",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "completed"
+          }
         }
-      ]
+      ],
+      "timestamps": {
+        "createdAt": "2026-01-31T23:02:25.866Z",
+        "completedAt": "2026-01-31T23:02:25.866Z"
+      },
+      "failureCount": 0
     },
     {
       "id": "AI-MONITOR-001d",
@@ -1037,7 +1051,7 @@
     },
     {
       "id": "PROC-001",
-      "status": "pending",
+      "status": "completed",
       "priority": "high",
       "title": "Process Management: Robust Child Process Lifecycle & Orphan Cleanup",
       "feature": "process-management",
@@ -1063,8 +1077,22 @@
             "oldStatus": "completed",
             "newStatus": "pending"
           }
+        },
+        {
+          "timestamp": "2026-01-31T22:58:07.186Z",
+          "type": "completed",
+          "message": "Completed by Loopwork (parallel worker 5)\n\nSession: loopwork-default-2026-01-31T22-49-42-72137\nIteration: 1",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "completed"
+          }
         }
-      ]
+      ],
+      "timestamps": {
+        "createdAt": "2026-01-31T22:58:07.186Z",
+        "completedAt": "2026-01-31T22:58:07.186Z"
+      },
+      "failureCount": 0
     },
     {
       "id": "PROC-001a",
