fix: resolve ESLint errors and add test isolation utilities
- Add missing ESLint configs for ai-monitor and executor packages
- Add required ESLint devDependencies to ai-monitor and executor packages
- Fix 54 ESLint errors in loopwork package:
  * Remove unused imports (MonitorAction, ErrorPattern, PatternMatch, etc.)
  * Prefix unused parameters with underscore
  * Replace 'any' types with 'unknown' or proper types
  * Add telemetry to console exceptions in ESLint config
  * Fix syntax error in telemetry/index.ts
- Add TelemetryManager.resetInstance() for test isolation
- Add shutdown() method to TelemetryManager for proper cleanup

--- a/packages/ai-monitor/package.json
+++ b/packages/ai-monitor/package.json
@@ -25,7 +25,10 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
+    "eslint": "^9.39.2"
   },
   "keywords": ["loopwork", "ai", "monitoring", "auto-healing", "circuit-breaker"],
   "author": "Loopwork AI",
