refactor(loopwork): migrate to use shared packages
Update loopwork core to use extracted packages:

- Import types from @loopwork-ai/contracts
- Use StreamLogger from @loopwork-ai/common
- Reference CliExecutor from @loopwork-ai/executor
- Remove deleted files (spawners, model-selector, WorkerPoolManager)
- Update imports across adapters, backends, plugins
- Add new features: scaffold command, semantic-indexer, debugger plugin
- Update contracts and test files

--- a/packages/loopwork/package.json
+++ b/packages/loopwork/package.json
@@ -45,9 +45,14 @@
     "@loopwork-ai/agents": "workspace:*",
     "@loopwork-ai/ai-monitor": "workspace:*",
     "@loopwork-ai/checkpoint": "workspace:*",
+    "@loopwork-ai/common": "workspace:*",
+    "@loopwork-ai/contracts": "workspace:*",
+    "@loopwork-ai/executor": "workspace:*",
     "@loopwork-ai/result-parser": "workspace:*",
+    "@loopwork-ai/state": "workspace:*",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
+    "handlebars": "^4.7.8",
     "ink": "^4.4.1",
     "ink-testing-library": "^3.0.0",
     "ora": "8.0.1",
@@ -55,6 +60,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/handlebars": "^4.1.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
