--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "madge": "^8.0.0",
     "turbo": "^2.7.6",
     "typescript": "^5.0.0"
   },
@@ -27,6 +28,13 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.72.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.211.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.211.0",
+    "@opentelemetry/metrics": "^0.24.0",
+    "@opentelemetry/sdk-node": "^0.211.0",
+    "@opentelemetry/semantic-conventions": "^1.39.0",
+    "@opentelemetry/tracing": "^0.24.0",
     "events": "^3.3.0",
     "ink-testing-library": "^4.0.0"
   }
